added footer, contact form using formspree and contact section

--- a/src/css/navbar.module.css
+++ b/src/css/navbar.module.css
@@ -7,6 +7,7 @@
 
 .nav-links {
   list-style-type: none;
+  transition: var(--mainTransition);
   height: 0;
   overflow: hidden;
 }
@@ -20,12 +21,14 @@
   padding: 1rem 1.25rem;
   text-decoration: none;
   text-transform: capitalize;
-  color: black;
+  color: var(--mainBlack);
+  transition: var(--mainTransition);
   font-weight: bold;
+  letter-spacing: var(--mainSpacing);
 }
 
 .nav-links a:hover {
-  color: green;
+  color: var(--primaryColor);
 }
 
 @media screen and (min-width: 576px) {
