--- a/src/css/contact.module.css
+++ b/src/css/contact.module.css
@@ -5,11 +5,11 @@
 }
 
 form {
-  background-color: var(--mainGray);
+  background-color: var(--secondaryBackgroundColor);
   height: 440px;
   width: 600px;
   border-radius: 8px;
-  box-shadow: var(--darkShadow);
+  box-shadow: var(--insetBoxShadow);
   margin: 5vh auto;
   padding: 20px 30px;
   max-width: calc(100vw - 40px);
@@ -35,6 +35,7 @@ textarea:focus {
 }
 label {
   font-family: var(--titleFontFamily);
+  color: var(--primaryColor);
 }
 
 label:before {
