--- a/src/css/hero.module.css
+++ b/src/css/hero.module.css
@@ -1,5 +1,33 @@
 .hero {
+  top: var(--navbarHeight);
+  height: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.call-to-action {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding: 2rem;
+}
+
+.call-to-action h1 {
+  font-size: var(--ms-large-4);
+  font-weight: 200;
+  text-align: center;
+}
+
+.hero-image-wrapper svg {
+  width: 100%;
+  height: auto;
+}
+
+@media screen and (max-width: 768px) {
+  .call-to-action h1 {
+    font-size: var(--ms-small-4);
+  }
 }
