--- a/src/css/navbar.module.css
+++ b/src/css/navbar.module.css
@@ -15,6 +15,10 @@
 }
 
 .nav-links {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   list-style-type: none;
   transition: var(--mainTransition);
   height: 0;
@@ -69,5 +73,6 @@
   .nav-links {
     height: auto;
     display: flex;
+    flex-direction: row;
   }
 }
