--- a/src/css/hero.module.css
+++ b/src/css/hero.module.css
@@ -1,6 +1,6 @@
 .hero {
   top: var(--navbarHeight);
-  height: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
