--- a/src/css/hero.module.css
+++ b/src/css/hero.module.css
@@ -1,6 +1,7 @@
 .hero {
   top: var(--navbarHeight);
   height: 100vh;
+  padding-top: 5rem;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -29,5 +30,11 @@
 @media screen and (max-width: 768px) {
   .call-to-action h1 {
     font-size: var(--ms-small-4);
+  }
+}
+
+@media screen and (max-width: 1503px) {
+  .hero {
+    padding-top: 0;
   }
 }
