upgraded packages, removed AnchorLink plugin to use regular a tag, added scroll-padding-top to fix issue with fixed navbar when clicking link

--- a/src/css/contact.module.css
+++ b/src/css/contact.module.css
@@ -27,6 +27,7 @@ textarea {
   border: 0;
   transition: var(--mainTransition);
   border-bottom: 2px solid var(--primaryColor);
+  color: var(--lightGray);
 }
 input:focus,
 textarea:focus {
