--- a/src/css/navbar.module.css
+++ b/src/css/navbar.module.css
@@ -1,3 +1,7 @@
+html {
+  scroll-padding-top: 82px;
+}
+
 .navbar {
   background-color: var(--secondaryBackgroundColor);
 }
@@ -12,6 +16,12 @@
   color: var(--primaryColor);
   letter-spacing: var(--mainSpacing);
   font-weight: 200;
+  font-size: xx-large;
+}
+
+.logo a {
+  color: inherit;
+  text-decoration: inherit;
 }
 
 .nav-links {
