--- a/src/css/projects.module.css
+++ b/src/css/projects.module.css
@@ -1,5 +1,4 @@
 .center {
-  width: 80vw;
   margin: 0 auto;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -10,12 +9,14 @@ img {
   border-radius: 8px 8px 0 0;
 }
 
-h5 a {
+h3 {
   color: var(--primaryColor);
+  font-size: var(--ms-large-2);
+  padding: 0.5rem;
 }
 
 .description {
-  padding: 1rem;
+  padding: 2.5rem;
 }
 
 .project p {
