Broke paragraph into 2 paragraphs in about me section. Changed paragraph text justification, increased line-height and font, added indent, and adjusted the paragraph width

--- a/src/css/about.module.css
+++ b/src/css/about.module.css
@@ -5,8 +5,18 @@
 .description {
   color: var(--titleColor);
   padding: 1rem 0;
-  line-height: 1.5;
+  line-height: 1.8;
+  font-size: 1.1rem;
   letter-spacing: 0.1rem;
-  text-align: justify;
+  text-align: left;
+  text-indent: 4rem;
   text-justify: auto;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+strong {
+  color: var(--primaryColor);
+  opacity: 0.9;
+  font-weight: 400;
 }
