--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -44,6 +44,24 @@ html {
   height: 100vh;
   width: 100vw;
   overflow-x: hidden;
+  scrollbar-width: normal;
+  scrollbar-color: #444646 var(--primaryBackgroundColor);
+}
+
+html::-webkit-scrollbar {
+  width: 1.2vw;
+}
+
+html::-webkit-scrollbar-thumb {
+  background-color: #4445;
+}
+
+html::-webkit-scrollbar-thumb:hover {
+  background-color: #444646;
+}
+
+html::-webkit-scrollbar-track {
+  background-color: var(--primaryBackgroundColor);
 }
 
 body {
