--- a/src/css/project.css
+++ b/src/css/project.css
@@ -28,14 +28,33 @@
   padding: 1rem;
 }
 
-.github-icon > svg {
-  color: var(--offWhite);
-  height: 2.5rem;
-  width: 2.5rem;
-  margin: 2rem auto 0;
+.button-container {
+  display: flex;
+  justify-content: center;
+}
+
+.icon-button {
+  background-color: var(--primaryColor);
+  display: inline-block;
+  color: var(--primaryBackgroundColor);
+  width: 5.8rem;
+  height: 1.8rem;
+  padding: 0.3rem 1rem;
+  border-radius: 8px;
+  margin: 10px;
+  text-decoration: none;
+  vertical-align: middle;
+}
+
+.icon {
+  margin-right: 0.5rem;
+  height: 1.3rem;
+  width: 1.3rem;
+  vertical-align: middle;
 }
 
 .technology-wrapper > .technology-title {
+  margin-top: 0.3rem;
   border-top: 1px solid var(--darkGray);
   border-bottom: 1px solid var(--darkGray);
   color: var(--offWhite);
